<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/Opcion_Todas"
        android:title="@string/Opcion_Todas"
        android:icon="@drawable/ic_todos"
        android:color="#D500FF"
        />

    <item
        android:id="@+id/Opcion_Ajustes"
        android:title="@string/Opcion_Ajustes"
        android:icon="@drawable/ic_ajustes"
        android:color="#00ECFF"
        />

<!--    <item-->
<!--        android:id="@+id/Opcion_AcercaDe"-->
<!--        android:title="@string/Opcion_AcercaDe"-->
<!--        android:icon="@drawable/ic_acerca_de"/>-->

    <item
        android:id="@+id/Opcion_Salir"
        android:title="@string/Opcion_Salir"
        android:icon="@drawable/ic_salir"
        android:color="#FF0004"
        />

    <item
        android:id="@+id/GeneradorPassword"
        android:title="@string/menu_Generador_password"
        android:icon="@drawable/ic_passwordv2" />

</menu>