<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="ordenar.json"
        app:lottie_autoPlay="true"/>

    <!--Nuevos-->
    <Button
        android:id="@+id/Btn_Nuevos"
        android:text="@string/Btn_Nuevos"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Pasados-->
    <Button
        android:id="@+id/Btn_Pasados"
        android:text="@string/Btn_Pasados"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Asc-->
    <Button
        android:id="@+id/Btn_Asc"
        android:text="@string/Btn_Asc"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--Des-->
    <Button
        android:id="@+id/Btn_Des"
        android:text="@string/Btn_Des"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/opensans_bold"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>