<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="#fff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/TXT_password_maestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_regular"
            android:textColor="#000"
            android:textSize="18sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <!--Visualizar la contrase maestra actual-->
            <EditText
                android:id="@+id/Password_maestra"
                android:text="@string/Password_maestra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:gravity="center"
                android:fontFamily="@font/opensans_regular"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:textSize="20sp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--Nueva contraseña maestra-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Et_nuevo_password_maestra"
                android:hint="@string/Et_nuevo_password_maestra"
                android:fontFamily="@font/opensans_regular"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirmar la contraseña maestra-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/Et_C_nuevo_password_maestra"
                android:hint="@string/Et_C_nuevo_password_maestra"
                android:fontFamily="@font/opensans_regular"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Botones-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <!--Cambiar password maestra-->
            <Button
                android:id="@+id/Btn_cambiar_password_maestra"
                android:text="@string/Btn_cambiar_password_maestra"
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/opensans_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Cancelar-->
            <Button
                android:id="@+id/Btn_cancelar_password_maestra"
                android:text="@string/Btn_cancelar_password_maestra"
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>